AssignDriver method has been modified and changed to work in true logic